--- a/components/src/components/select/select.css
+++ b/components/src/components/select/select.css
@@ -27,6 +27,7 @@
   overflow: auto;
   max-height: 200px;
   position: absolute;
+  z-index: 999;
 }
 
 .sp-select-options.dark {
